--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-  "functions": {
-    "api/*.py": {
-      "runtime": "python3.9"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/*.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/\1.py"
+      "dest": "/api/$1.py"
     }
   ]
 }
